Edit image size from linked pages

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -25,13 +25,15 @@
             <li><sup>1</sup>/<sub>2</sub> teaspoon salt</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon baking soda</li><br>
         </ul>
-        <h3>Steps</h3>
+        <h3>Steps</h3><br>
         <ol>
             <li>Gather all ingredients.</li><br>
             <li>Preheat the oven to 325 degrees F (165 degrees C). Grease an 8-inch square pan.</li><br>
             <li>Combine sugar, butter, and water in a medium saucepan; cook and stir over medium heat until boiling. Remove from heat and stir in chocolate chips until melted and smooth; mix in eggs and vanilla. Combine flour, salt, and baking soda; stir into the chocolate mixture. Spread brownie batter evenly into the prepared pan.</li><br>
             <li>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 20 to 30 minutes. Let cool completely before cutting into squares.</li><br>
-        </ol>
+        </ol><br>
+
+        <em><strong>Enjoy it...!</strong></em>
 
 
 
