--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -46,7 +46,7 @@
             <li>1 <sup>1</sup>/<sub>2</sub> teaspoon vanilla extract</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon salt</li><br>
         </ul>
-        <h3>Steps</h3>
+        <h3>Steps</h3><br>
         <ol>
             <li>Preheat the oven to 375 degrees F (190 degrees C). Grease the sides of a 9-inch springform pan. Line the bottom with a circle of parchment paper.</li><br>
             <li>Crush biscuits into crumbs using a food processor. Stir crumbs, butter, confectioners' sugar, and salt together to make the crust. Press into the bottom of the pan. Rinse food processor and set aside for the cranberry glaze.</li><br>
@@ -58,7 +58,10 @@
             <li>Line a rimmed baking sheet with parchment paper. Place 1/4 cup granulated sugar in a shallow bowl. Drain the syrup-coated cranberries, then roll them in the sugar. Place the sugared cranberries on the prepared baking sheet and allow to dry, 30 minutes to 1 hour.</li><br>
             <li>In the meantime, make the glaze. Combine cranberries, water, and sugar in a small saucepan. Simmer, crushing cranberries, until jammy, about 8 minutes. Let cool slightly. Transfer to the food processor; add confectioners' sugar, orange juice, corn syrup, vanilla, and salt. Process until smooth.</li><br>
             <li>Strain cranberry glaze through a fine-mesh sieve and discard solids. Pour over the cheesecake and smooth across the top with a small offset spatula. Garnish with sugared cranberries.</li><br>
-        </ol>
+        </ol><br>
+    
+        <em><strong>Enjoy it...!</strong></em>
+    
 
 
 
