--- a/recipes/portuguese-custard-tarts.html
+++ b/recipes/portuguese-custard-tarts.html
@@ -12,7 +12,7 @@
         <h3>Description</h3>
 
         <!--Use 3 ≠ ul lists, because could not get the "dots" before each line, using a dl list.-->
-        
+
         <p>Pasteis de nata or Portuguese custard tarts, with their signature flaky crust and sweet custard filling are world-famous, and incredibly delicious.</p>
         <p>This recipe shows you how to make them from scratch, using basic ingredients.</p>
         <p>Yes, it requires numerous steps and a certain amount of finesse, but the results are so worth it.</p>
@@ -38,7 +38,7 @@
             <li>6 large egg yolks</li><br>
             <li>1 teaspoon vanilla extract (optional)</li><br>
         </ul>
-        <h3>Steps</h3>
+        <h3>Steps</h3><br>
         <ol>
             <li>Combine flour, salt, and cold water in a bowl. Mix with a wooden spoon until dough just comes together and pulls away from the sides of the bowl. Dough should be sticky, adjust with more flour or water.</li><br>
             <li>Transfer dough onto a well-floured surface. Dust a little more flour over the top. Knead for 1 to 2 minutes to form a round. Cover and let rest for 15 to 20 minutes.</li><br>
@@ -53,7 +53,9 @@
             <li>Unwrap the dough and trim any uneven bits on the ends. Score log into 12 even pieces using a knife; cut through.</li><br>
             <li>Place a piece of dough in each muffin cup. Dip your thumb lightly in some cold water. Press your thumb into the center of the swirl; push dough against the bottom and up the sides of the cup until it reaches least 1/8 inch past the top. Fill each cup 3/4 of the way with custard.</li><br>
             <li>Bake in the preheated oven until the pastry is browned and bubbly, and the tops start to blister and caramelize, about 12 minutes. Cool tarts briefly and serve warm.</li><br>
-        </ol>
+        </ol><br>
+
+        <em><strong>Enjoy it...!</strong></em>
 
 
 
