Add images to index page and edit links

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>ODIN <em>recipes</em></h1>
+        <a href="recipes/brownies.html"><img src="images/brownies_index.jpg"></a>
+        <a href="recipes/portuguese-custard-tarts.html"><img src="images/portuguese-custard-tarts_index.jpg"></a>
+        <a href="recipes/creme-brulee.html"><img src="images/creme-brulee_index.jpg"></a>
+        <a href="recipes/cheesecake.html"><img src="images/cheesecake_index.jpg"></a>
+
+        <br><br>
+
+        <h3><strong>Index</strong></h3>
         <ul>
-        <li><a href="recipes/cheesecake.html">Cranberry Cheesecake</a></li>
-        <li><a href="recipes/portuguese-custard-tarts.html">Portuguese Custard Tarts</a></li>
-        <li><a href="recipes/brownies.html">Brownies</a></li>
+
+        <li><a href="recipes/brownies.html">brownies</a></li><br>
+        <li><a href="recipes/portuguese-custard-tarts.html">portuguese custard tarts</a></li><br>
+        <li><a href="recipes/creme-brulee.html">crème brûlée</a></li><br>
+        <li><a href="recipes/cheesecake.html">cranberry cheesacake</a></li><br>
+        
+        
         </ul>
     </body>
 
