--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -25,7 +25,7 @@
             <li><sup>1</sup>/<sub>2</sub> teaspoon salt</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon baking soda</li><br>
         </ul>
-        <h3>Steps</h3><br>
+        <h3>Steps</h3>
         <ol>
             <li>Gather all ingredients.</li><br>
             <li>Preheat the oven to 325 degrees F (165 degrees C). Grease an 8-inch square pan.</li><br>
