Add alt text to images

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
     <body>
         <h1>ODIN <em>recipes</em></h1>
-        <a href="recipes/brownies.html"><img src="images/brownies_index.jpg"></a>
-        <a href="recipes/portuguese-custard-tarts.html"><img src="images/portuguese-custard-tarts_index.jpg"></a>
-        <a href="recipes/creme-brulee.html"><img src="images/creme-brulee_index.jpg"></a>
-        <a href="recipes/cheesecake.html"><img src="images/cheesecake_index.jpg"></a>
+        <a href="recipes/brownies.html"><img src="images/brownies_index.jpg" alt="brownies and glass of milk image"></a>
+        <a href="recipes/portuguese-custard-tarts.html"><img src="images/portuguese-custard-tarts_index.jpg" alt="plate of custart tarts image"></a>
+        <a href="recipes/creme-brulee.html"><img src="images/creme-brulee_index.jpg" alt="spoon of creme brulee image"></a>
+        <a href="recipes/cheesecake.html"><img src="images/cheesecake_index.jpg" alt="cranberry cheesecake image"></a>
 
         <br><br>
 
         <h3><strong>Index</strong></h3>
+
         <ul>
 
         <li><a href="recipes/brownies.html">brownies</a></li><br>
@@ -22,8 +23,8 @@
         <li><a href="recipes/creme-brulee.html">crème brûlée</a></li><br>
         <li><a href="recipes/cheesecake.html">cranberry cheesacake</a></li><br>
         
-        
         </ul>
+
     </body>
 
 </html>
