--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>brownies.</h1>
-        <img src="../images/brownies.jpg">
+        <img src="../images/brownies.jpg" alt="brownies and glass of milk image">
         <br>
         <br>
         <h3>Description</h3>
