--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>cranberry cheesecake.</h1>
-        <img src="../images/cheesecake-with-cranberry.jpg">
+        <img src="../images/cheesecake-with-cranberry.jpg" alt="cranberry cheesecake image">
         <br>
         <br>
         <h3>Description</h3>
