--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>crème brûlée.</h1>
-        <img src="../images/creme-brulee.jpg">
+        <img src="../images/creme-brulee.jpg" alt="spoon of creme brulee image">
         <br>
         <br>
         <h3>Description</h3>
