--- a/recipes/portuguese-custard-tarts.html
+++ b/recipes/portuguese-custard-tarts.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>portuguese custard tarts.</h1>
-        <img src="../images/portuguese-custard-tarts.jpg">
+        <img src="../images/portuguese-custard-tarts.jpg" alt="plate of custard tarts image">
         <br>
         <br>
         <h3>Description</h3>
