Add css classes to html files

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>ODIN <em>recipes</em></h1>
-        <a href="recipes/brownies.html"><img src="images/brownies_index.jpg" alt="brownies and glass of milk image"></a>
-        <a href="recipes/portuguese-custard-tarts.html"><img src="images/portuguese-custard-tarts_index.jpg" alt="plate of custart tarts image"></a>
-        <a href="recipes/creme-brulee.html"><img src="images/creme-brulee_index.jpg" alt="spoon of creme brulee image"></a>
-        <a href="recipes/cheesecake.html"><img src="images/cheesecake_index.jpg" alt="cranberry cheesecake image"></a>
+        <a href="recipes/brownies.html" class="image"><img src="images/brownies_index.jpg" alt="brownies and glass of milk image"></a>
+        <a href="recipes/portuguese-custard-tarts.html" class="image"><img src="images/portuguese-custard-tarts_index.jpg" alt="plate of custart tarts image"></a>
+        <a href="recipes/creme-brulee.html" class="image"><img src="images/creme-brulee_index.jpg" alt="spoon of creme brulee image"></a>
+        <a href="recipes/cheesecake.html" class="image"><img src="images/cheesecake_index.jpg" alt="cranberry cheesecake image"></a>
 
         <br><br>
 
-        <h3><strong>Index</strong></h3>
+        <h2><strong><em>Sweeten up your life...!</em></strong></h2>
 
-        <ul>
+        <ul><br>
 
         <li><a href="recipes/brownies.html">brownies</a></li><br>
         <li><a href="recipes/portuguese-custard-tarts.html">portuguese custard tarts</a></li><br>
