--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>brownies.</h1>
-        <img src="../images/brownies.jpg" alt="brownies and glass of milk image">
+        <img class="img-pages" src="../images/brownies.jpg" alt="brownies and glass of milk image">
         <br>
         <br>
-        <h3>Description</h3>
+        <h3 class="sub-title-pages">Description</h3>
         <p>This is a very easy recipe of brownies...perfect for a fast and delicious desert that everyone will love!</p>
-        <p>Semisweet chocolate chips give a depth of flavour that cannot be achieved with cocoa powder. Be sure to use quality chocolate chips to ensure the best chocolate flavour!</p>
+        <p>Semisweet chocolate chips give a depth of flavour that cannot be achieved with cocoa powder.</p>
+        <p>Be sure to use quality chocolate chips to ensure the best chocolate flavour!</p>
         <br>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="sub-title-pages">Ingredients</h3>
+        <ul class="ul-pages">
             <li><sup>1</sup>/<sub>2</sub> cup white sugar</li><br>
             <li>2 tablespoons butter</li><br>
             <li>2 tablespoons water</li><br>
@@ -25,15 +27,15 @@
             <li><sup>1</sup>/<sub>2</sub> teaspoon salt</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon baking soda</li><br>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="sub-title-pages">Steps</h3>
+        <ol class="ol-pages">
             <li>Gather all ingredients.</li><br>
             <li>Preheat the oven to 325 degrees F (165 degrees C). Grease an 8-inch square pan.</li><br>
             <li>Combine sugar, butter, and water in a medium saucepan; cook and stir over medium heat until boiling. Remove from heat and stir in chocolate chips until melted and smooth; mix in eggs and vanilla. Combine flour, salt, and baking soda; stir into the chocolate mixture. Spread brownie batter evenly into the prepared pan.</li><br>
             <li>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 20 to 30 minutes. Let cool completely before cutting into squares.</li><br>
         </ol><br>
 
-        <em><strong>Enjoy it...!!!</strong></em>
+        <h3></p><em><strong>Last step...enjoy it!</strong></em></h3><br>
 
 
 
