--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>cranberry cheesecake.</h1>
-        <img src="../images/cheesecake-with-cranberry.jpg" alt="cranberry cheesecake image">
+        <img class="img-pages" src="../images/cheesecake-with-cranberry.jpg" alt="cranberry cheesecake image">
         <br>
         <br>
         <h3>Description</h3>
@@ -18,7 +19,7 @@
 
         <!--Use 3 ≠ ul lists, because could not get the "dots" before each line, using a dl list.-->
 
-        <ul><strong>Cheesecake</strong><br><br>
+        <ul class="ul-pages"><strong>Cheesecake</strong><br><br>
             <li>10 digestive biscuits</li><br>
             <li>5 tablespoons butter, melted</li><br>
             <li>2 tablespoons confectioners' sugar</li><br>
@@ -30,13 +31,13 @@
             <li>2 teaspoons vanilla extract</li><br>
             <li>1 orange, zested</li><br>
         </ul>
-        <ul><strong>Sugared Cranberries</strong><br><br>          
+        <ul class="ul-pages"><strong>Sugared Cranberries</strong><br><br>          
             <li><sup>1</sup>/<sub>3</sub> cup white sugar</li><br>
             <li><sup>1</sup>/<sub>2</sub> cup water</li><br>
             <li>1 cup fresh cranberries</li><br>
             <li><sup>1</sup>/<sub>4</sub> cup white sugar</li><br>
         </ul>
-        <ul><strong>Cranberry Glaze</strong><br><br>          
+        <ul class="ul-pages"><strong>Cranberry Glaze</strong><br><br>          
             <li>1 cup fresh cranberries</li><br>
             <li><sup>1</sup>/<sub>4</sub> cup water</li><br>
             <li>2 tablespoons white sugar</li><br>
@@ -47,7 +48,7 @@
             <li><sup>1</sup>/<sub>4</sub> teaspoon salt</li><br>
         </ul>
         <h3>Steps</h3><br>
-        <ol>
+        <ol class="ol-pages">
             <li>Preheat the oven to 375 degrees F (190 degrees C). Grease the sides of a 9-inch springform pan. Line the bottom with a circle of parchment paper.</li><br>
             <li>Crush biscuits into crumbs using a food processor. Stir crumbs, butter, confectioners' sugar, and salt together to make the crust. Press into the bottom of the pan. Rinse food processor and set aside for the cranberry glaze.</li><br>
             <li>Bake crust in the preheated oven until firm, 8 to 10 minutes. Remove the crust from the oven and reduce the temperature to 325 degrees F (165 degrees C). Let crust cool while making the filling.</li><br>
@@ -60,7 +61,7 @@
             <li>Strain cranberry glaze through a fine-mesh sieve and discard solids. Pour over the cheesecake and smooth across the top with a small offset spatula. Garnish with sugared cranberries.</li><br>
         </ol><br>
     
-        <em><strong>Enjoy it...!</strong></em>
+        <h3><em><strong>Last step...enjoy it!</strong></em></h3><br>
     
 
 
