--- a/recipes/portuguese-custard-tarts.html
+++ b/recipes/portuguese-custard-tarts.html
@@ -3,35 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>portuguese custard tarts.</h1>
-        <img src="../images/portuguese-custard-tarts.jpg" alt="plate of custard tarts image">
+        <img class="img-pages" src="../images/portuguese-custard-tarts.jpg" alt="plate of custard tarts image">
         <br>
         <br>
         <h3>Description</h3>
 
-        <!--Use 3 ≠ ul lists, because could not get the "dots" before each line, using a dl list.-->
+        <!--Use 3 ≠ ul lists, because could not get the "dots" before each line, using a dl list. But maybe a list inside a list would have been a better solution.-->
 
         <p>Pasteis de nata or Portuguese custard tarts, with their signature flaky crust and sweet custard filling are world-famous, and incredibly delicious.</p>
         <p>This recipe shows you how to make them from scratch, using basic ingredients.</p>
         <p>Yes, it requires numerous steps and a certain amount of finesse, but the results are so worth it.</p>
         <br>
         <h3>Ingredients</h3><br>
-        <ul><strong>Dough</strong><br><br>
+        <ul class="ul-pages"><strong>Dough</strong><br><br>
             <li>1 cup all-purpose flour</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon kosher salt</li><br>
             <li><sup>1</sup>/<sub>3</sub> cup cold water</li><br>
             <li>1 stick high-quality unsalted butter, fully softened, divided</li><br>
         </ul>
-        <ul><strong>Sugar Syrup</strong><br><br>          
+        <ul class="ul-pages"><strong>Sugar Syrup</strong><br><br>          
             <li><sup>3</sup>/<sub>4</sub> cup white sugar</li><br>
             <li><sup>1</sup>/<sub>4</sub> cup water</li><br>
             <li>1 tablespoon water</li><br>
             <li>1 cinnamon stick (optional)</li><br>
             <li>1 lemon, zested in large strips (optional)</li><br>
         </ul>
-        <ul><strong>Custard Base</strong><br><br>          
+        <ul class="ul-pages"><strong>Custard Base</strong><br><br>          
             <li><sup>1</sup>/<sub>3</sub> cup all-purpose flour</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon kosher salt</li><br>
             <li>1 <sup>1</sup>/<sub>2</sub> cups milk</li><br>
@@ -39,7 +40,7 @@
             <li>1 teaspoon vanilla extract (optional)</li><br>
         </ul>
         <h3>Steps</h3><br>
-        <ol>
+        <ol class="ol-pages">
             <li>Combine flour, salt, and cold water in a bowl. Mix with a wooden spoon until dough just comes together and pulls away from the sides of the bowl. Dough should be sticky, adjust with more flour or water.</li><br>
             <li>Transfer dough onto a well-floured surface. Dust a little more flour over the top. Knead for 1 to 2 minutes to form a round. Cover and let rest for 15 to 20 minutes.</li><br>
             <li>Roll dough into a square about 1/8-inch-thick, dusting with flour as necessary; dough should still be sticky.</li><br>
@@ -55,7 +56,7 @@
             <li>Bake in the preheated oven until the pastry is browned and bubbly, and the tops start to blister and caramelize, about 12 minutes. Cool tarts briefly and serve warm.</li><br>
         </ol><br>
 
-        <em><strong>Enjoy it...!</strong></em>
+        <h3><em><strong>Last step...enjoy it!</strong></em></h3><br>
 
 
 
