--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>crème brûlée.</h1>
-        <img src="../images/creme-brulee.jpg" alt="spoon of creme brulee image">
+        <img class="img-pages" src="../images/creme-brulee.jpg" alt="spoon of creme brulee image">
         <br>
         <br>
         <h3>Description</h3>
@@ -15,7 +16,7 @@
         <p>This classic crème brûlée recipe is on par with what you'd get at a 5-star restaurant, but it's surprisingly easy to make at home!</p>
         <br>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ul-pages">
             <li>6 egg yolks</li><br>
             <li>6 tablespoons white sugar, divided</li><br>
             <li><sup>1</sup>/<sub>2</sub>teaspoon vanilla extract</li><br>
@@ -23,7 +24,7 @@
             <li>2 tablespoons brown sugar</li><br>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class="ol-pages">
             <li>Preheat the oven to 300 degrees F (150 degrees C).</li><br>
             <li>Whisk egg yolks, 4 tablespoons white sugar, and vanilla extract in a mixing bowl until thick and creamy; set aside.</li><br>
             <li>Pour mixture into the top pan of a double boiler. Stir over simmering water until mixture lightly coats the back of a spoon, about 3 minutes. Pour into a shallow heat-proof dish.</li><br>
@@ -33,7 +34,7 @@
             <li>Allow to cool slightly, then refrigerate until custard is set again, about 10 minutes.</li><br>
         </ol><br>
 
-        <em><strong>Enjoy it...!</strong></em>
+        <h3><em><strong>Last step...enjoy it!</strong></em></h3><br>
 
 
 
