Add a font from a hosted service

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Odin Project: Recipes</title>
         <link rel="stylesheet" href="styles.css">
+
+        <!--Google Fonts: Thasadith-->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+        <!--Google Font: Shadows Into Light Two-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Shadows+Into+Light+Two&family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
 
     <body>
