--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
         <link rel="stylesheet" href="../styles.css">
+
+        <!--Google Font: Thasadith-->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+        <!--Google Font: Shadows Into Light Two-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Shadows+Into+Light+Two&family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>crème brûlée.</h1>
@@ -32,9 +42,9 @@
             <li>Turn the oven to broil.</li><br>
             <li>Combine remaining 2 tablespoons white sugar and brown sugar in a small bowl. Sprinkle mixture evenly over custard. Place dish under the broiler until sugar melts and caramelizes, about 2 minutes. Watch carefully so as not to burn.</li><br>
             <li>Allow to cool slightly, then refrigerate until custard is set again, about 10 minutes.</li><br>
-        </ol><br>
+        </ol>
 
-        <h3><em><strong>Last step...enjoy it!</strong></em></h3><br>
+        <h3><em>Last step...enjoy it!</em></h3><br>
 
 
 
