--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
         <link rel="stylesheet" href="../styles.css">
+
+        <!--Google Font: Thasadith-->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+        <!--Google Font: Shadows Into Light Two-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Shadows+Into+Light+Two&family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>brownies.</h1>
@@ -33,9 +43,9 @@
             <li>Preheat the oven to 325 degrees F (165 degrees C). Grease an 8-inch square pan.</li><br>
             <li>Combine sugar, butter, and water in a medium saucepan; cook and stir over medium heat until boiling. Remove from heat and stir in chocolate chips until melted and smooth; mix in eggs and vanilla. Combine flour, salt, and baking soda; stir into the chocolate mixture. Spread brownie batter evenly into the prepared pan.</li><br>
             <li>Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 20 to 30 minutes. Let cool completely before cutting into squares.</li><br>
-        </ol><br>
+        </ol>
 
-        <h3></p><em><strong>Last step...enjoy it!</strong></em></h3><br>
+        <h3></p><em>Last step...enjoy it!</em></h3><br>
 
 
 
