--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
         <link rel="stylesheet" href="../styles.css">
+
+        <!--Google Font: Thasadith-->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+        <!--Google Font: Shadows Into Light Two-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Shadows+Into+Light+Two&family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>cranberry cheesecake.</h1>
@@ -15,7 +25,7 @@
         <p> The cranberry glaze is a really beautiful color, and the sugared cranberries are the perfect topping.</p>
         <p>Most of the work is done the night before, so it's not even that hard to make.</p>
         <br>
-        <h3>Ingredients</h3><br>
+        <h3>Ingredients</h3>
 
         <!--Use 3 ≠ ul lists, because could not get the "dots" before each line, using a dl list.-->
 
@@ -47,7 +57,7 @@
             <li>1 <sup>1</sup>/<sub>2</sub> teaspoon vanilla extract</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon salt</li><br>
         </ul>
-        <h3>Steps</h3><br>
+        <h3>Steps</h3>
         <ol class="ol-pages">
             <li>Preheat the oven to 375 degrees F (190 degrees C). Grease the sides of a 9-inch springform pan. Line the bottom with a circle of parchment paper.</li><br>
             <li>Crush biscuits into crumbs using a food processor. Stir crumbs, butter, confectioners' sugar, and salt together to make the crust. Press into the bottom of the pan. Rinse food processor and set aside for the cranberry glaze.</li><br>
@@ -59,9 +69,9 @@
             <li>Line a rimmed baking sheet with parchment paper. Place 1/4 cup granulated sugar in a shallow bowl. Drain the syrup-coated cranberries, then roll them in the sugar. Place the sugared cranberries on the prepared baking sheet and allow to dry, 30 minutes to 1 hour.</li><br>
             <li>In the meantime, make the glaze. Combine cranberries, water, and sugar in a small saucepan. Simmer, crushing cranberries, until jammy, about 8 minutes. Let cool slightly. Transfer to the food processor; add confectioners' sugar, orange juice, corn syrup, vanilla, and salt. Process until smooth.</li><br>
             <li>Strain cranberry glaze through a fine-mesh sieve and discard solids. Pour over the cheesecake and smooth across the top with a small offset spatula. Garnish with sugared cranberries.</li><br>
-        </ol><br>
+        </ol>
     
-        <h3><em><strong>Last step...enjoy it!</strong></em></h3><br>
+        <h3><em>Last step...enjoy it!</em></h3><br>
     
 
 
