--- a/recipes/portuguese-custard-tarts.html
+++ b/recipes/portuguese-custard-tarts.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <title>Odin Project: Recipes</title>
         <link rel="stylesheet" href="../styles.css">
+
+        <!--Google Font: Thasadith-->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+        <!--Google Font: Shadows Into Light Two-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Shadows+Into+Light+Two&family=Thasadith:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>portuguese custard tarts.</h1>
@@ -18,7 +28,7 @@
         <p>This recipe shows you how to make them from scratch, using basic ingredients.</p>
         <p>Yes, it requires numerous steps and a certain amount of finesse, but the results are so worth it.</p>
         <br>
-        <h3>Ingredients</h3><br>
+        <h3>Ingredients</h3>
         <ul class="ul-pages"><strong>Dough</strong><br><br>
             <li>1 cup all-purpose flour</li><br>
             <li><sup>1</sup>/<sub>4</sub> teaspoon kosher salt</li><br>
@@ -39,7 +49,7 @@
             <li>6 large egg yolks</li><br>
             <li>1 teaspoon vanilla extract (optional)</li><br>
         </ul>
-        <h3>Steps</h3><br>
+        <h3>Steps</h3>
         <ol class="ol-pages">
             <li>Combine flour, salt, and cold water in a bowl. Mix with a wooden spoon until dough just comes together and pulls away from the sides of the bowl. Dough should be sticky, adjust with more flour or water.</li><br>
             <li>Transfer dough onto a well-floured surface. Dust a little more flour over the top. Knead for 1 to 2 minutes to form a round. Cover and let rest for 15 to 20 minutes.</li><br>
@@ -54,9 +64,9 @@
             <li>Unwrap the dough and trim any uneven bits on the ends. Score log into 12 even pieces using a knife; cut through.</li><br>
             <li>Place a piece of dough in each muffin cup. Dip your thumb lightly in some cold water. Press your thumb into the center of the swirl; push dough against the bottom and up the sides of the cup until it reaches least 1/8 inch past the top. Fill each cup 3/4 of the way with custard.</li><br>
             <li>Bake in the preheated oven until the pastry is browned and bubbly, and the tops start to blister and caramelize, about 12 minutes. Cool tarts briefly and serve warm.</li><br>
-        </ol><br>
+        </ol>
 
-        <h3><em><strong>Last step...enjoy it!</strong></em></h3><br>
+        <h3><em>Last step...enjoy it!</em></h3><br>
 
 
 
